# indian-address-parser

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  TINYBERT_COMPARISON.md  compare_models.py  compare_tinybert.py  full_results.json  gold_test_set.jsonl  tinybert_vs_shiprocket_results.json
dataset_scripts/: build_gold_dataset.py  build_raw_dataset.py  gold_dataset_card.md  raw_dataset_card.md  redact.py
src/indian_address_parser/: __init__.py  cli.py  parser.py
tests/: test_parser.py
