[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indian-address-parser"
version = "0.3.0"
description = "Parse raw Indian address strings into structured fields using fine-tuned flan-t5-small (default), Qwen3 LoRA, or TinyBERT models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Gagandeep" }
]
keywords = ["nlp", "address-parsing", "india", "named-entity-recognition", "lora", "qwen", "t5", "flan-t5", "tinybert", "bert"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.51.0",  # Qwen3 model_type support was added exactly at 4.51.0 (verified)
    # peft<0.18.0 unconditionally passes use_auth_token=None into hf_hub_download,
    # which recent huggingface_hub (1.x) rejects entirely (param removed) -> crashes
    # PeftModel.from_pretrained with a misleading "Can't find adapter_config.json"
    # error. 0.18.0 made this conditional (verified: fixed at exactly 0.18.0).
    "peft>=0.18.0",
    "huggingface_hub>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/innerkorehq/indian-address-parser"
Repository = "https://github.com/innerkorehq/indian-address-parser"
"Model (t5 - default)" = "https://huggingface.co/gagan1985/flan-t5-small-indian-address-parser"
"Model (qwen)" = "https://huggingface.co/gagan1985/qwen3-0.6b-indian-address-parser"
"Model (tinybert)" = "https://huggingface.co/gagan1985/tinybert-4l-312d-indian-address-parser"

[project.scripts]
indian-address-parser = "indian_address_parser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/indian_address_parser"]

[tool.pytest.ini_options]
markers = ["slow: requires network access, downloads real model weights"]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
